# dockerhub-cleanup

./: .gitignore  AGENTS.md  LICENSE  README.md  mise.toml  prek.toml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
dockerhub_cleanup/: __init__.py  cli.py  crane.py  dockerhub.py  domain.py  errors.py  http.py  image_management.py  service.py
docs/: design.md  requirements.md
tests/: test_cli.py  test_crane.py  test_dockerhub.py  test_domain.py  test_http.py  test_image_management.py  test_service.py
