[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "dockerhub-cleanup"
version = "0.1.0"
description = "Safely preview and clean stale or untagged Docker Hub images"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
required-version = "==0.11.28"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
